force-app/main/default/objects/Course_Settings__c/Course_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Course Settings</label>
</CustomObject>