force-app/main/default/objects/Course_Settings__c/fields/Additional_Admin_Cost__c.field-meta.xml
<CustomField>
    <fullName>Additional_Admin_Cost__c</fullName>
    <label>Additional Admin Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>