force-app/main/default/objects/Course_Settings__c/fields/Schedule_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Schedule_of_Sessions__c</fullName>
    <label>Schedule of Sessions</label>
    <length>18</length>
    <type>Text</type>
</CustomField>