force-app/main/default/objects/Course_Settings__c/fields/Test_Practitioner_Schedule_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Test_Practitioner_Schedule_of_Sessions__c</fullName>
    <label>Test Practitioner Schedule of Sessions</label>
    <length>18</length>
    <type>Text</type>
</CustomField>