force-app/main/default/objects/Course_Settings__c/fields/Venue_Schedule_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Venue_Schedule_Report_ID__c</fullName>
    <label>Venue Schedule Report ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>